# vsm

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
src/: app.rs  error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs  wrapper.rs
src/config/: loader.rs  mod.rs  vsm_cf.rs
src/logger/: console.rs  format.rs  mod.rs
src/ui/: aesthetic.rs  mod.rs  prompt.rs
src/utils/: fs.rs  misc.rs  mod.rs  shell.rs
tests/: integration_tests.rs
