[package]
name = "vsm"
version = "0.1.1"
authors = ["Matt Williams <matt.k.williams@protonmail.com>"]
edition = "2021"
rust-version = "1.56.0"
description = "A simple, interactive, command line vim session file manager."
homepage = "https://github.com/thebashpotato/vsm"
repository = "https://github.com/thebashpotato/vsm"
documentation = "https://docs.rs/vsm/"
keywords = ["vsm", "vim", "neovim", "mksession"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[features]
default = []
full = []

[dependencies]
serde = { version = "1.0.147", default-features = false, features = ["serde_derive"] }
envy = "0.4"
once_cell = "1.15.0"
thiserror = "1.0"
clap = { version = "4.0.18", features = ["cargo", "wrap_help"] }
log = "0.4.17"
env_logger = "0.10.0"
colored = "2"
derive-getters = "0.2.0"
toml = "0.7.2"
inquire = "0.5.2"

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3.0"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
features = ["full"]

[profile.release]
codegen-units = 1
incremental = false
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # optimize at the linking stage
panic = "abort"     # don't unwind the stack on panic

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
